      o the standard Jena readers generate startRead and finishRead events
      o all the Graph events now come with their source Graph attached as an
        argument to the event method.
      o added test case and fixed resulting issues to ensure that .remove()
        on the iterator from find() generated a notifyDeleteTriple event.

  Reasoners
      o Fixed bug 927644, mishandling of cycles in transitive reasoner
      o Fixed ommission in handling of someValuesFrom applied to an rdfs:Datatype.
      o Fixed bug in hide() table not being carried across from prebuilt
        reasoner caches, which resulted in the prototypical instance of
        owl:Thing being visible in listIndividuals.
      o Fixed bug in TransitiveReasoner reported by wangxiao
      o Changed delete for RETE reasoner to be non-incremental to work around
        bug without demanding full reference counting
      o Added experimental OWLMini and OWLMicro reasoners
        N.B. These remain experimental at 2.2beta. By 2.2 final the split 
        between these should be clarified, support for unionOf rationalized 
        and documentation updated.

      o [kers] Added WrappedReasonerFactory class and RuleReasoner interface.
        Some tweaking to "implements" clauses. Refactored out some setRules
        code into FBRuleReasoner and BaseRuleReasonerFactory, to make it easy
        to share code for ModelSpec's reasoner specs.

  ModelSpecs
      o The modelspec language has been extended. Reasoner specs can now
        specify multiple rulesets by URL or by literal strings. Schemas
        may also be specified by URL. 

  PrefixMappings
      o Standard no longer contains vcard, jms, or rss.
      o Extended introduced = Standard + vcard, jms, rss.
      o usePrefix deprecated - use shortForm instead.
      o qnameFor added; result is legal qname or null.
      o w.withDefaultMapping(x) added, which adds mappings from x which
        don't clash with those already in w.

  Exceptions