@@ -5,7 +5,7 @@
  * 
  * (c) Copyright 2003, 2004 Hewlett-Packard Development Company, LP
  * [See end of file]
- * $Id: InfModel.java,v 1.7 2004-12-06 13:50:11 andy_seaborne Exp $
+ * $Id: InfModel.java,v 1.8 2005-02-14 18:09:07 der Exp $
  *****************************************************************/
 package com.hp.hpl.jena.rdf.model;
 
@@ -35,7 +35,7 @@ import java.util.Iterator;
  * and Derivations are not yet stable.</p>
  * 
  * @author <a href="mailto:der@hplb.hpl.hp.com">Dave Reynolds</a>
- * @version $Revision: 1.7 $ on $Date: 2004-12-06 13:50:11 $
+ * @version $Revision: 1.8 $ on $Date: 2005-02-14 18:09:07 $
  */
 public interface InfModel extends Model {
 
@@ -81,6 +81,9 @@ public interface InfModel extends Model {
      * Test the consistency of the underlying data. This normally tests
      * the validity of the bound instance data against the bound
      * schema data. 
+     * <p>Logically inconsistent models will be indicated by a ValidityReport which
+     * reports isValid() as false. Additional non-fatal problems, such as uninstantiatable classes,
+     * may be reported as warnings.
      * @return a ValidityReport structure
      */
     public ValidityReport validate();    
